[tool.poetry]
name = "dbt-coalesce-2021"
version = "0.1.0"
description = ""
authors = ["kevinzenghu <kevin@quantif.ai>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
jupyterlab = "^3.2.0"
pandas = "^1.3.4"
altair = "^4.1.0"
networkx = "^2.6.3"
matplotlib = "^3.4.3"
ipycytoscape = "^1.3.0"
ipywidgets = "^7.6.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
